--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,9 @@ Version: 0.1
 Authors@R: as.person(c(
     "Dipesh Gautam <dipesh.gautam@duke.edu> [aut, cre]",
     "Radhika Anand <radhika.anand@duke.edu> [aut]",
-    "Haosheng Luo <haosheng.luo@duke.edu> [aut]"
-
-  ))
+    "Haosheng Luo <haosheng.luo@duke.edu> [aut]"))
 Description: What the package does (one paragraph)
 Depends: R (>= 3.0.2)
 License: None
 LazyData: true
+Imports: png, Matrix
