--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: concomp
-Title: Find connected components and boundaries of the components in a logical matrix.
+Title: Find connected components and boundaries of the components.
 Version: 0.1
 Authors@R: as.person(c(
     "Dipesh Gautam <dipesh.gautam@duke.edu> [aut, cre]",
     "Radhika Anand <radhika.anand@duke.edu> [aut]",
     "Haosheng Luo <haosheng.luo@duke.edu> [aut]"))
-Description: What the package does (one paragraph)
+Description: An implementation of connected components labeling in R. It identifies both
+    labels and boundaries of components. Also convert png images into logical matrices
+    which can be used to identify labels and boundaries.
 Depends:
     R (>= 3.0.2),
     png,
