renoved Matrix from description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,6 @@ Authors@R: as.person(c(
 Description: An implementation of connected components labeling in R. It identifies both
     labels and boundaries of components. Also convert png images into logical matrices
     which can be used to identify labels and boundaries.
-Depends:
-    R (>= 3.0.2),
-    png,
-    Matrix
+Depends:R (>= 3.0.2), png
 License: None
 LazyData: true
